Issues with pgfimage avoided by using includegraphics.

--- a/lab04/lab04.tex
+++ b/lab04/lab04.tex
@@ -68,9 +68,9 @@ So at -3\,dB, the voltage (or current) has dropped to $1/\sqrt{2}$ of its input 
 
 \begin{figure}
 \begin{center}
-\pgfimage[width=0.45\textwidth]{pics/rc_low_pass_filter_bode_plot_magnitude}
+\includegraphics[width=0.45\textwidth]{pics/rc_low_pass_filter_bode_plot_magnitude}
 \quad
-\pgfimage[width=0.45\textwidth]{pics/rc_low_pass_filter_bode_plot_phase}
+\includegraphics[width=0.45\textwidth]{pics/rc_low_pass_filter_bode_plot_phase}
 \end{center}
 \caption{Bode plots of the relative magnitude (left) and phase (right) of the output of an RC low-pass filter.}
 \label{fig:rc_low_pass_filter_bode_plot}
@@ -118,9 +118,9 @@ with $f_{3\,dB} = 1/2\pi RC$.
 
 \begin{figure}
 \begin{center}
-\pgfimage[width=0.45\textwidth]{pics/rc_high_pass_filter_bode_plot_magnitude}
+\includegraphics[width=0.45\textwidth]{pics/rc_high_pass_filter_bode_plot_magnitude}
 \quad
-\pgfimage[width=0.45\textwidth]{pics/rc_high_pass_filter_bode_plot_phase}
+\includegraphics[width=0.45\textwidth]{pics/rc_high_pass_filter_bode_plot_phase}
 \end{center}
 \caption{Bode plots of the relative magnitude (left) and phase (right) of the output of an RC high-pass filter.}
 \label{fig:rc_high_pass_filter_bode_plot}
@@ -188,7 +188,7 @@ While capacitors generally offer superior performance to inductors, they also sh
 
 \begin{figure}
 \begin{center}
-\pgfimage[width=0.45\textwidth]{pics/capacitor_cornell_dubilier}
+\includegraphics[width=0.45\textwidth]{pics/capacitor_cornell_dubilier}
 \end{center}
 \caption{Impedance of real capacitors versus frequency. Note that the capacitors behave like inductors above a few MHz [source: Cornell Dubilier].}
 \label{fig:capacitor_cornell_dubilier}
@@ -242,7 +242,7 @@ Example 1: 5th order Butterworth $LC$ low-pass filter with $f_{3\,dB} = 10$\,kHz
 
 \begin{figure}
 \begin{center}
-\pgfimage[width=0.45\textwidth]{pics/lc_low_pass_butterworth_filter_5th_order}
+\includegraphics[width=0.45\textwidth]{pics/lc_low_pass_butterworth_filter_5th_order}
 \end{center}
 \caption{Bode plot of the gain of a 5th order Butterworth $LC$ low-pass filter.}
 \label{fig:lc_low_pass_butterworth_filter_5th_order}
@@ -255,7 +255,7 @@ Example 2: 5th order Chebyshev LC low-pass filter with $f_{3\,dB} = 10$\,kHz for
 
 \begin{figure}
 \begin{center}
-\pgfimage[width=0.45\textwidth]{pics/lc_low_pass_chebyshev_filter_5th_order}
+\includegraphics[width=0.45\textwidth]{pics/lc_low_pass_chebyshev_filter_5th_order}
 \end{center}
 \caption{Bode plot of the gain of a 5th order Chebyshev $LC$ low-pass filter.}
 \label{fig:lc_low_pass_chebyshev_filter_5th_order}
