--- a/lab05/lab05.tex
+++ b/lab05/lab05.tex
@@ -45,7 +45,7 @@ A more complete model of a diode would treat the resistance of the diode as a lo
 
 \begin{figure}
 \begin{center}
-\pgfimage[width=0.45\textwidth]{pics/diode_IV_characteristic}
+\includegraphics[width=0.45\textwidth]{pics/diode_IV_characteristic}
 \end{center}
 \caption{A typical silicon diode I-V characteristic curve with forward, reverse, and breakdown regions indicated. [Image credit: \href{https://learn.sparkfun.com/tutorials/diodes/real-diode-characteristics}{Sparkfun}]}
 \label{fig:diode-IV-characteristic}
@@ -101,13 +101,13 @@ A full-wave rectifier is also a frequency multiplier. The output of a rectified 
  \begin{center}
   \begin{subfigure}[b]{0.48\textwidth}
    \begin{center}
-    \pgfimage[width=\textwidth]{pics/frequency_multiplier_time}
+    \includegraphics[width=\textwidth]{pics/frequency_multiplier_time}
    \end{center}
    \caption{time domain}
   \end{subfigure}
   \begin{subfigure}[b]{0.48\textwidth}
    \begin{center}
-    \pgfimage[width=\textwidth]{pics/frequency_multiplier_FFT}
+    \includegraphics[width=\textwidth]{pics/frequency_multiplier_FFT}
    \end{center}
    \caption{frequency domain}
   \end{subfigure}
