--- a/lecture03/slides03.tex
+++ b/lecture03/slides03.tex
@@ -60,7 +60,7 @@
 \begin{frame}
  \frametitle{Alternating-Current Signals}
  \begin{block}{Components with phase difference}
-  \pgfimage[width=\textwidth]{pics/Phase_difference} \\
+  \includegraphics[width=\textwidth]{pics/Phase_difference} \\
   CIVIL: in capacitor I before V; V before I in inductor
  \end{block}
 \end{frame}
@@ -103,7 +103,7 @@
  \frametitle{Complex Impedances}
  \begin{block}{Example: RLC circuit}
   \begin{center}
-   \pgfimage[width=0.4\textwidth]{pics/RLC_circuit}
+   \includegraphics[width=0.4\textwidth]{pics/RLC_circuit}
   \end{center}
   \only<1>{What is the equivalent impedance $Z_{eq}$?}
  \end{block}
@@ -152,7 +152,7 @@
   \end{itemize}
  \end{block}
  \begin{center}
-  \pgfimage[width=0.45\textwidth]{pics/capacitor_bank}
+  \includegraphics[width=0.45\textwidth]{pics/capacitor_bank}
  \end{center}
 \end{frame}
 
@@ -162,8 +162,8 @@
  \frametitle{Transformers}
  \begin{columns}
   \begin{column}{0.4\textwidth}
-   \pgfimage<1>[width=\textwidth]{pics/transformers_prime}
-   \pgfimage<2>[width=\textwidth]{pics/transformers} \\
+   \includegraphics<1>[width=\textwidth]{pics/transformers_prime}
+   \includegraphics<2>[width=\textwidth]{pics/transformers} \\
    \only<2>{Flux $\Phi = \mu N_1 i_1(t) A$, where $A$ cross-sectional area, $N_1$ windings}
   \end{column}
   \begin{column}{0.6\textwidth}
@@ -197,7 +197,7 @@
    \begin{column}{0.0\textwidth}
    \end{column}
    \begin{column}{0.35\textwidth}
-    \pgfimage[width=\textwidth]{pics/Black_box}
+    \includegraphics[width=\textwidth]{pics/Black_box}
    \end{column}
    \begin{column}{0.65\textwidth}
     \begin{itemize}
@@ -212,7 +212,7 @@
    \begin{column}{0.0\textwidth}
    \end{column}
    \begin{column}{0.2\textwidth}
-    \pgfimage[width=\textwidth]{pics/Voltage_divider}
+    \includegraphics[width=\textwidth]{pics/Voltage_divider}
    \end{column}
    \begin{column}{0.8\textwidth}
     \begin{itemize}
@@ -232,7 +232,7 @@
    \begin{column}{0.0\textwidth}
    \end{column}
    \begin{column}{0.5\textwidth}
-    \pgfimage[width=\textwidth]{pics/RC_filter}
+    \includegraphics[width=\textwidth]{pics/RC_filter}
    \end{column}
    \begin{column}{0.5\textwidth}
     \begin{itemize}
@@ -272,7 +272,7 @@
    \begin{column}{0.0\textwidth}
    \end{column}
    \begin{column}{0.5\textwidth}
-    \pgfimage[width=\textwidth]{pics/RC_filter}
+    \includegraphics[width=\textwidth]{pics/RC_filter}
    \end{column}
    \begin{column}{0.5\textwidth}
     \begin{equation*}
@@ -288,7 +288,7 @@
  \only<1>{
  \begin{block}{Bode plots}
   \begin{center}
-   \pgfimage[width=0.4\textwidth]{pics/Bode_plot}
+   \includegraphics[width=0.4\textwidth]{pics/Bode_plot}
   \end{center}
  \end{block}
  }
