--- a/lecture05/slides05.tex
+++ b/lecture05/slides05.tex
@@ -41,7 +41,7 @@
  \frametitle{Band gap structure in periodic lattice}
  \begin{block}{Fermi energy $E_F$ in band gap}
   \begin{center}
-   \pgfimage[width=0.7\textwidth]{pics/bandgap}
+   \includegraphics[width=0.7\textwidth]{pics/bandgap}
   \end{center}
  \end{block}
 \end{frame}
@@ -51,12 +51,12 @@
  \begin{columns}[t]
   \begin{column}{0.47\textwidth}
    \begin{block}{n-type doping}
-    \pgfimage[width=\textwidth]{pics/bands_n}
+    \includegraphics[width=\textwidth]{pics/bands_n}
    \end{block}
   \end{column}
   \begin{column}{0.49\textwidth}
    \begin{block}{p-type doping}
-    \pgfimage[width=\textwidth]{pics/bands_p}
+    \includegraphics[width=\textwidth]{pics/bands_p}
    \end{block}
   \end{column}
  \end{columns}
@@ -90,7 +90,7 @@
  \frametitle{pn-junction}
  \begin{block}{Diffusion at pn interface}
   \begin{center}
-   \pgfimage[width=0.5\textwidth]{pics/pn_junction}
+   \includegraphics[width=0.5\textwidth]{pics/pn_junction}
   \end{center}
   Potential difference builds up, n-type at higher potential due to positive holes.
  \end{block}
