--- a/lecture12/slides12.tex
+++ b/lecture12/slides12.tex
@@ -40,7 +40,7 @@
  \frametitle{Transformers}
  \begin{columns}
   \begin{column}{0.4\textwidth}
-   \pgfimage[width=\textwidth]{pics/transformers} \\
+   \includegraphics[width=\textwidth]{pics/transformers} \\
    Flux $\Phi = \mu N_1 i_1(t) A$, where $A$ cross-sectional area, $N_1$ windings
   \end{column}
   \begin{column}{0.6\textwidth}
@@ -71,7 +71,7 @@
    \begin{column}{0.0\textwidth}
    \end{column}
    \begin{column}{0.35\textwidth}
-    \pgfimage[width=\textwidth]{pics/Black_box}
+    \includegraphics[width=\textwidth]{pics/Black_box}
    \end{column}
    \begin{column}{0.65\textwidth}
     \begin{itemize}
@@ -86,7 +86,7 @@
    \begin{column}{0.0\textwidth}
    \end{column}
    \begin{column}{0.2\textwidth}
-    \pgfimage[width=\textwidth]{pics/Voltage_divider}
+    \includegraphics[width=\textwidth]{pics/Voltage_divider}
    \end{column}
    \begin{column}{0.8\textwidth}
     \begin{itemize}
@@ -106,7 +106,7 @@
    \begin{column}{0.0\textwidth}
    \end{column}
    \begin{column}{0.5\textwidth}
-    \pgfimage[width=\textwidth]{pics/RC_filter}
+    \includegraphics[width=\textwidth]{pics/RC_filter}
    \end{column}
    \begin{column}{0.5\textwidth}
     \begin{equation*}
@@ -121,7 +121,7 @@
  \end{block}
  \begin{block}{Bode plots}
   \begin{center}
-   \pgfimage[width=0.4\textwidth]{pics/Bode_plot}
+   \includegraphics[width=0.4\textwidth]{pics/Bode_plot}
   \end{center}
  \end{block}
 \end{frame}
@@ -151,7 +151,7 @@
  \frametitle{Fourier series}
  \begin{block}{Example: Square wave}
   \begin{center}
-   \pgfimage[width=0.48\textwidth]{pics/square_wave_approximation}
+   \includegraphics[width=0.48\textwidth]{pics/square_wave_approximation}
   \end{center}
   Filters (high-pass or low-pass) will have the effect of removing certain frequency harmonics.
  \end{block}
@@ -176,7 +176,7 @@
  \frametitle{RLC filters}
  \begin{columns}
   \begin{column}{0.4\textwidth}
-   \pgfimage[width=\textwidth]{pics/RLC_circuit}
+   \includegraphics[width=\textwidth]{pics/RLC_circuit}
   \end{column}
   \begin{column}{0.6\textwidth}
    \begin{itemize}
@@ -246,7 +246,7 @@
 \begin{frame}
  \frametitle{RLC filters: gain across capacitor}
  \begin{center}
-  \pgfimage[width=0.6\textwidth]{pics/RLC_bode_capacitor}
+  \includegraphics[width=0.6\textwidth]{pics/RLC_bode_capacitor}
  \end{center}
 \end{frame}
 
@@ -288,7 +288,7 @@
 \begin{frame}
  \frametitle{RLC filters: gain across inductor}
  \begin{center}
-  \pgfimage[width=0.6\textwidth]{pics/RLC_bode_inductor}
+  \includegraphics[width=0.6\textwidth]{pics/RLC_bode_inductor}
  \end{center}
 \end{frame}
 
@@ -296,10 +296,10 @@
  \frametitle{RLC filters: gain larger than 0\,dB}
  \begin{columns}
   \begin{column}{0.5\textwidth}
-   \pgfimage[width=\textwidth]{pics/RLC_bode_capacitor}   
+   \includegraphics[width=\textwidth]{pics/RLC_bode_capacitor}   
   \end{column}
   \begin{column}{0.5\textwidth}
-   \pgfimage[width=\textwidth]{pics/RLC_bode_inductor}
+   \includegraphics[width=\textwidth]{pics/RLC_bode_inductor}
   \end{column}
  \end{columns}
  \begin{block}{Gain larger than 1}
