--- a/lecture06/slides06.tex
+++ b/lecture06/slides06.tex
@@ -148,7 +148,7 @@
    \begin{column}{0.0\textwidth}
    \end{column}
    \begin{column}{0.5\textwidth}
-    \pgfimage[width=\textwidth]{pics/RC_filter}
+    \includegraphics[width=\textwidth]{pics/RC_filter}
    \end{column}
    \begin{column}{0.5\textwidth}
     \begin{equation*}
@@ -163,7 +163,7 @@
  \end{block}
  \begin{block}{Bode plots}
   \begin{center}
-   \pgfimage[width=0.4\textwidth]{pics/Bode_plot}
+   \includegraphics[width=0.4\textwidth]{pics/Bode_plot}
   \end{center}
  \end{block}
 \end{frame}
@@ -263,7 +263,7 @@
  \frametitle{RLC filters}
  \begin{columns}
   \begin{column}{0.4\textwidth}
-   \pgfimage[width=\textwidth]{pics/RLC_circuit}
+   \includegraphics[width=\textwidth]{pics/RLC_circuit}
   \end{column}
   \begin{column}{0.6\textwidth}
    \begin{itemize}
@@ -333,7 +333,7 @@
 \begin{frame}
  \frametitle{RLC filters: gain across capacitor}
  \begin{center}
-  \pgfimage[width=0.6\textwidth]{pics/RLC_bode_capacitor}
+  \includegraphics[width=0.6\textwidth]{pics/RLC_bode_capacitor}
  \end{center}
 \end{frame}
 
@@ -375,7 +375,7 @@
 \begin{frame}
  \frametitle{RLC filters: gain across inductor}
  \begin{center}
-  \pgfimage[width=0.6\textwidth]{pics/RLC_bode_inductor}
+  \includegraphics[width=0.6\textwidth]{pics/RLC_bode_inductor}
  \end{center}
 \end{frame}
 
@@ -383,10 +383,10 @@
  \frametitle{RLC filters: gain larger than 0\,dB}
  \begin{columns}
   \begin{column}{0.5\textwidth}
-   \pgfimage[width=\textwidth]{pics/RLC_bode_capacitor}   
+   \includegraphics[width=\textwidth]{pics/RLC_bode_capacitor}   
   \end{column}
   \begin{column}{0.5\textwidth}
-   \pgfimage[width=\textwidth]{pics/RLC_bode_inductor}
+   \includegraphics[width=\textwidth]{pics/RLC_bode_inductor}
   \end{column}
  \end{columns}
  \begin{block}{Gain larger than 1}
