Small fixes to calendar (Spring 2015).

--- a/calendar.tex
+++ b/calendar.tex
@@ -1,13 +1,14 @@
 \documentclass{article}
-\usepackage{standalone}
+
 \usepackage{import}
+\subimport{preamble/}{lab_preamble.tex}
 
 \usepackage{fullpage}
 \usepackage{booktabs}
 \usepackage{longtable}
 
 \title{Electronics: Course Calendar}
-\author{College of William \& Mary}
+\author{Wouter Deconinck}
 \date{Spring 2015}
 
 \begin{document}
