Add lab title page between each chapter.

--- a/electronics_labs.tex
+++ b/electronics_labs.tex
@@ -16,6 +16,7 @@
 \tableofcontents
 
 \foreach \n in {01,02,03,04,05,06,07,08,09,10,11,12}{%
+ \chapter{Lab \n}
  \import{lab\n/}{lab\n}
  \import{lab\n/}{notes\n}
 }
