Remove standalone option subpreambles since it just confused pdflatex

--- a/preamble/beamer_presentation_preamble.tex
+++ b/preamble/beamer_presentation_preamble.tex
@@ -11,7 +11,10 @@
 % - Talk length is about 20min.
 % - Style is ornate.
 
-\usepackage[subpreambles=true]{standalone}
+\usepackage{standalone}
+\usepackage{import}
+
+\usepackage{bookmark}
 
 \usepackage{pgf}
 \usepackage{tikz}
