Get rid of pgf_tikz and put all in preambles.

--- a/preamble/lab_preamble.tex
+++ b/preamble/lab_preamble.tex
@@ -17,7 +17,11 @@
 % Add ability to resume enumeration environments with /begin{enumerate}[resume]
 \usepackage{enumitem}
 
-\input{preamble/pgf_tikz.tex}
+\usepackage{pgf}
+\usepackage{tikz}
+\usepackage{bodegraph}
+\usepackage{circuitikz}
+\usetikzlibrary{calc,arrows,shapes,trees,fadings,positioning,intersections}
 
 \usepackage[english]{babel}
 \usepackage[latin1]{inputenc}
