--- a/preamble/beamer_presentation_preamble.tex
+++ b/preamble/beamer_presentation_preamble.tex
@@ -18,8 +18,9 @@
 
 \usepackage{pgf}
 \usepackage{tikz}
+\usepackage{bodegraph}
 \usepackage{circuitikz}
-\usetikzlibrary{arrows,shapes,trees,fadings}
+\usetikzlibrary{calc,arrows,shapes,trees,fadings,positioning,intersections}
 
 % Copyright 2004 by Till Tantau <tantau..
 %
@@ -67,10 +68,6 @@
 % Or whatever. Note that the encoding and the font should match. If T1
 % does not look nice, try deleting the line with the fontenc.
 
-% below we add drawing macroses
-\usepackage{tikz}
-\usetikzlibrary{arrows,shapes}
-\usetikzlibrary{fadings}
 \usepackage{listings}
 \usepackage{amsmath}
 
