Move tikzstyle settings to preamble and out of individual slides.

--- a/preamble/beamer_presentation_preamble.tex
+++ b/preamble/beamer_presentation_preamble.tex
@@ -22,6 +22,13 @@
 \usepackage{circuitikz}
 \usetikzlibrary{calc,arrows,shapes,trees,fadings,positioning,intersections}
 
+\tikzstyle{block} = [draw, fill=blue!20, rectangle, 
+    minimum height=3em, minimum width=6em]
+\tikzstyle{sum} = [draw, fill=blue!20, circle, node distance=1cm]
+\tikzstyle{input} = [coordinate]
+\tikzstyle{output} = [coordinate]
+\tikzstyle{pinstyle} = [pin edge={to-,thin,black}]
+
 % Copyright 2004 by Till Tantau <tantau..
 %
 % In principle, this file can be redistributed and/or modified under
