--- a/preamble/lab_preamble.tex
+++ b/preamble/lab_preamble.tex
@@ -23,6 +23,13 @@
 \usepackage{circuitikz}
 \usetikzlibrary{calc,arrows,shapes,trees,fadings,positioning,intersections}
 
+\tikzstyle{block} = [draw, fill=blue!20, rectangle, 
+    minimum height=3em, minimum width=6em]
+\tikzstyle{sum} = [draw, fill=blue!20, circle, node distance=1cm]
+\tikzstyle{input} = [coordinate]
+\tikzstyle{output} = [coordinate]
+\tikzstyle{pinstyle} = [pin edge={to-,thin,black}]
+
 \usepackage[english]{babel}
 \usepackage[latin1]{inputenc}
 \usepackage[T1]{fontenc}
