--- a/calendar.tex
+++ b/calendar.tex
@@ -8,7 +8,7 @@
 \usepackage{longtable}
 
 \title{Electronics: Course Calendar}
-\author{Wouter Deconinck}
+\subimport{./}{authors.tex}
 \date{Spring 2015}
 
 \begin{document}
