--- a/electronics_labs.tex
+++ b/electronics_labs.tex
@@ -6,7 +6,7 @@
 \import{preamble/}{lab_preamble}
 
 \title{Electronics: Lab Manuals}
-\author{Wouter Deconinck}
+\subimport{./}{authors.tex}
 
 \begin{document}
 \maketitle
