--- a/preamble/beamer_presentation_preamble.tex
+++ b/preamble/beamer_presentation_preamble.tex
@@ -88,10 +88,7 @@
 %\subtitle
 %{Include Only If Paper Has a Subtitle}
 
-\author[W. Deconinck] % (optional, use only with lots of authors)
-{
-  Wouter Deconinck
-}
+\subimport{./}{authors.tex}
 
 
 %{Wouter Deconinck\inst{1} \and S.~Another\inst{1}}
